# Vehicle_Carpooling

./: .gitignore  LICENCE  README.md  REAMDE.md  REAMDE.rst  notebook.ipynb  setup.cfg
data/: default.osm.passenger.trips.xml  osm.netccfg  osm.passenger.trips.xml  osm.poly.xml  osm.polycfg  osm.sumocfg  points.poly.xml
docs/source/: conf.py  index.rst
tests/: __init__.py  context.py  test_generator.py  test_passenger.py  test_path.py  test_simulation.py  test_solution.py  test_test_utils.py  test_utils.py  test_vehicle.py
tests/utils/: __init__.py  matrix_utils.py
vehicle_carpooling/: __init__.py  edge.py  node.py  passenger.py  path.py  problem.py  simulation.py  solution.py  vehicle.py
vehicle_carpooling/example_generator/: __init__.py  generator.py
vehicle_carpooling/utils/: __init__.py  paths.py  trees.py
