[metadata]
name = Vehicle Carpooling Optimizaiton
version = 0.0.0
license =  MIT Licence
description = A research project for carpooling optimization on taxi system
long_description = README.md
author = Louédec Glenn
author_email =
classifiers=
   

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   
   

[options.packages.find]
where=src